<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.example.nlashchy.holidays.MainActivity">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:textStyle="bold"
            android:background="?attr/colorPrimary">

            <ImageView
                android:id="@+id/calendar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/calendar_icon"
                android:scaleType="fitCenter"
                android:layout_gravity="right"
                android:layout_marginRight="8dp"/>

            <!--<ImageView-->
                <!--android:id="@+id/about"-->
                <!--android:layout_width="30dp"-->
                <!--android:layout_height="30dp"-->
                <!--android:src="@drawable/about"-->

                <!--android:scaleType="fitCenter" />-->


        </android.support.v7.widget.Toolbar>

        <!-- JANUARY -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/january"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/MonthFont"/>

        <View
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/january_1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/new_year"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar1stJanuary"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <!-- MARCH -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/march"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/MonthFont"/>

        <View
            android:layout_width="25dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/march_25"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/good_friday"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar25thOfMarch"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/march_28"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/easter_monday"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar28thOfMarch"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <!-- MAY -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/may"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/MonthFont"/>

        <View
            android:layout_width="20dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/may_1"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/first_of_may"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar01stOfMay"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/may_5"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/father_day"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar05thOfMay"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/may_15"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/pfingsten"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar15thOfMay"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <!-- OCTOBER -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/october"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/MonthFont"/>

        <View
            android:layout_width="25dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/october_3"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/unit_day"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar03thOfOctober"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/october_31"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/reformation_day"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar31sthOfOctober"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <!-- DECEMBER -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="16dp"
            android:text="@string/dezember"
            android:textAllCaps="true"
            android:textStyle="bold"
            style="@style/MonthFont"/>

        <View
            android:layout_width="30dp"
            android:layout_height="2dp"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/december_25"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/christmas"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar25thOfDecember"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/december_26"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/christmas_second_day"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/calendar26thOfDecember"
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:src="@drawable/save"
                android:scaleType="fitCenter" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>
